@@ -4,6 +4,11 @@ package Munin;
 # $Id$
 #
 # $Log$
+# Revision 1.11  2004/06/23 17:38:39  jimmyo
+# * Created munin-cgi-graph, which creates dynamic graphs.
+# * Added munin.conf option "output_graphs (cgi|cron)" which
+#   defaults to cron.
+#
 # Revision 1.10  2004/06/08 15:30:31  jimmyo
 # The server programs now open the log file at an earlier point.
 #
@@ -144,7 +149,7 @@ my @legal = ("tmpldir", "ncsa", "ncsa_server", "ncsa_config", "rundir",
 	"use_default_name", "use_node_name", "port", "graph_noscale",
 	"nsca", "nsca_server", "nsca_config", "extinfo", "fetch_data",
 	"filename", "max_processes", "nagios", "info", "graph_info", 
-	"graph_category"
+	"graph_category", "output_graphs",
     );
 
 
